--- a/Flagrum.Graphs/SequenceEditor.csproj
+++ b/Flagrum.Graphs/SequenceEditor.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
+    <StaticWebAssetBasePath>/sequenceeditor</StaticWebAssetBasePath>
   </PropertyGroup>
 
   <ItemGroup>
